2010-06-09  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* tests/simulate/other/realloc-01.c: Cut out some bits when compling for
	an AT90S8515 to avoid resource exhaustion (the ATmega128 version still
	contains everything).
	* tests/simulate/printf/sprintf-2.c: (Ditto.)
	* tests/simulate/printf/sprintf-3.c: (Ditto.)
	* tests/simulate/printf/sprintf-4.c: (Ditto.)
	* tests/simulate/scanf/sscanf-l.c: (Ditto.)
	* tests/simulate/scanf/sscanf_flt-fnn.c: (Ditto.)

2010-06-09  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	bug #28921: pointer to function > 128k flash
	* doc/api/faq.dox (faq_funcptr_gt128kib): Add entry describing
	that -mrelax is needed for the trampolines to work as designed.

2010-06-09  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Don Kinzer:
	bug #30018: Errors in include files
	* include/avr/iotn40.h: Fix stray characters in macro names.
	* include/avr/iom649p.h: (Ditto.)
	* include/avr/iom169pa.h: (Ditto.)

2010-06-08  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Various documentation fixes, mostly cosmetic.
	* include/avr/cpufunc.h: Fix doc grouping.
	* include/util/delay_basic.h: Slightly reorder, so it actually
	generates documentation again.
	* doc/api/rel-method.dox: Update for our SVN repository.
	* doc/api/malloc.dox: Fix doxygen warning.
	* doc/api/tools-install.dox: (Ditto.)
	* doc/api/faq.dox: (Ditto.)

2010-06-08  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	bug #30085: memcpy_P on XMega does not clr NVM.CMD before copy
	* include/avr/pgmspace.h: Mention that for Xmega devices,
	these functions require NVM.CMD being set to 0x00.

2010-06-08  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/avr/interrupt.h (cli, sei): Add a memory barrier,
	and cross-reference <util/atomic.h>.

2010-06-08  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Implement new header file: <avr/cpufunc.h>
	* include/avr/cpufunc.h: New file.
	* include/avr/Makefile.am (avr_HEADERS): Add cpufunc.h.
	* doc/api/doxygen.config.in (INPUT): Add avr/cpufunc.h.
