@@ -1,5 +1,10 @@
 2010-06-09  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
 
+	* libc/stdlib/malloc.c: Fix a bug introduced in r2131 that could
+	cause the freelist to be discarded.
+
+2010-06-09  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
+
 	* tests/simulate/other/realloc-01.c: Cut out some bits when compling for
 	an AT90S8515 to avoid resource exhaustion (the ATmega128 version still
 	contains everything).
